src/objects/LogsFromWebService__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationType__c</fullName>
        <label>OperationType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Respond__c</fullName>
        <label>Respond</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LogsFromWebService</label>
    <nameField>
        <label>LogsFromWebService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogsFromWebServices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>